// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post when comments are set to display renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "stretch",
        "height": "100%",
      },
      undefined,
    ]
  }
>
  <Tabs
    display="comments"
    onPressComments={[Function]}
    onPressPost={[Function]}
    totalComments={1}
  />
  <Comments
    post={
      Object {
        "author": Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/empower_two_women_logo.png",
          },
          "id": "1235we",
          "name": "Empodere Duas Mulheres",
        },
        "comments": Array [
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/empower_two_women_logo.png",
              },
              "id": "1235we",
              "name": "Empodere Duas Mulheres",
            },
            "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
            "edited": false,
            "id": "21097",
            "isAuthorCurrentUser": false,
            "publishedAt": 2019-01-01T00:00:00.000Z,
            "replies": Array [],
            "totalReplies": 0,
          },
        ],
        "content": null,
        "id": "10387-314fs-12asdbj",
        "imagePath": Object {
          "testUri": "../../../app/assets/images/image_post_1.jpg",
        },
        "publishedAt": 2000-01-01T00:00:00.000Z,
      }
    }
    setCommentId={[Function]}
  />
</View>
`;

exports[`Post when the body is set to display renders correctly 1`] = `
<View
  style={
    Array [
      undefined,
      undefined,
    ]
  }
>
  <Tabs
    display="body"
    onPressComments={[Function]}
    onPressPost={[Function]}
    totalComments={0}
  />
  <ScrollViewMock
    bounces={false}
  >
    <Content
      content={null}
      date={2000-01-01T00:00:00.000Z}
      imagePath={
        Object {
          "testUri": "../../../app/assets/images/image_post_1.jpg",
        }
      }
    />
    <Footer
      author={
        Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/empower_two_women_logo.png",
          },
          "id": "1235we",
          "name": "Empodere Duas Mulheres",
        }
      }
    />
  </ScrollViewMock>
</View>
`;

exports[`Post when the body is set to display renders correctly if no content is provided 1`] = `
<View
  style={
    Array [
      undefined,
      undefined,
    ]
  }
>
  <Tabs
    display="body"
    onPressComments={[Function]}
    onPressPost={[Function]}
    totalComments={0}
  />
  <ScrollViewMock
    bounces={false}
  >
    <Content
      content={null}
      date={2000-01-01T00:00:00.000Z}
      imagePath={
        Object {
          "testUri": "../../../app/assets/images/image_post_1.jpg",
        }
      }
    />
    <Footer
      author={
        Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/empower_two_women_logo.png",
          },
          "id": "1235we",
          "name": "Empodere Duas Mulheres",
        }
      }
    />
  </ScrollViewMock>
</View>
`;
